[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = "Asia Pacific"
authors = ["Marquez Daniel Alcantara <marquez_daniel_alcantara@connect.ite.edu.sg>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
